--- a/README
+++ b/README
@@ -1,3 +1,9 @@
 Java API backend using Spring and Hibernate.
 
 Supports DB sharding and auto updating schemas.
+
+
+TODO:
+
+-remove XML based context configuration
+-refactor and reorganize DB logic
